Added MEaningful routes in RouteConfig.cs and updated with links

--- a/MiraiConsultMVC/Views/Home/Home.cshtml
+++ b/MiraiConsultMVC/Views/Home/Home.cshtml
@@ -97,9 +97,9 @@
             question = "";
         var session = '<%=Session["userType"]%>';
         if (session != null && session == 2)
-            window.location.href = "../Patients/similarQuestions?question=" + question;
+            window.location.href = "/similarQuestions/" + question;
         else
-            window.location.href = "../Patients/similarQuestions?question=" + question;
+            window.location.href = "/similarQuestions/" + question;
     }
     function Count(x) {
         if (x.id == 'txtAreaQuestion')
