--- a/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
+++ b/MiraiConsultMVC/Views/Patients/Myactivity.cshtml
@@ -22,7 +22,7 @@
                         }
                         else
                         {
-                            <a class="question_text" href="/Patients/PatientQuestionDetails?questionid=@question.QuestionId">
+                            <a class="question_text" href="/Patients/PatientQuestionDetails/@question.QuestionId">
                                 @question.QuestionText
                             </a>
                         }
