--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -15,10 +15,7 @@
     <link rel="stylesheet" href="../Content/jquery-ui.css" />
     @*<%--Meta tag to avoid auto zoom in and out on gaining and loosing focus on textbox on phones.--%>*@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:title" content="@Session["Title"]" />
-    <meta property="og:url" content="@Session["Url"]">
-    <meta property="og:image" content="@ConfigurationSettings.AppSettings["askMiraiLink"]/Content/image/logo.png" />
-    <meta property="og:description" content="@Session["Description"]" />
+    @RenderSection("metatags", required: false)
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css' />
     <link href='http://www.berriart.com/sidr/javascripts/sidr/stylesheets/jquery.sidr.light.css'
           rel='stylesheet' type='text/css' />
@@ -39,7 +36,7 @@
         </asp:ContentPlaceHolder>*@
 </head>
 <body class ="form-horizontal">
-    @RenderSection("featured", required: false)
+    
     <div id="wrap">
         @*<form id="form1" runat="server" autocomplete="off" class="form-horizontal" onsubmit="fun()">*@
             <div class="navbar custom-navbar">
@@ -224,7 +221,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="find-doctors">
-                                        <a href="/finddoctor/finddoctors" class="menu-padding  reg-menu-padding">
+                                        <a href="/Home/finddoctors" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--find-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top"> Find a Doctor</span>
                                         </a>
                                     </li>
