--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -5,7 +5,7 @@
     <meta name="description" content="Healthcare now more accessible and convenient at MiraiConsult" />
     <meta property="og:title" content="MiraiConsult" />
     <meta property="og:image" content="http://demo.vertisinfotech.com:7171/askMirai/app/Resources/image/logo.png" />
-
+    <meta property="og:type" content="website" />
     <title>Mirai Consult ™ </title>
     <link rel="stylesheet" href="../Content/bootstrap.min.css" />
     <link rel="stylesheet" href="../Scripts/google-code-prettify/prettify.css" />
