--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -126,7 +126,7 @@
                                                     </a>
                                                 </li>
                                                 <li id="liFindDoc" class="find-doctors">
-                                                    <a href="@Url.Action("FindDoctors", "FindDoctor")">
+                                                    <a href="@Url.Action("FindDoctors", "Home")">
                                                         <span class="Icon Icon--find-doctor Icon--large"></span><span class="text"><br />Find a Doctor</span>
                                                     </a>
                                                 </li>
@@ -219,7 +219,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="find-doctors">
-                                        <a href="/finddoctor/finddoctors" class="menu-padding  reg-menu-padding">
+                                        <a href="/Home/finddoctors" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--find-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top"> Find a Doctor</span>
                                         </a>
                                     </li>
