--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -16,8 +16,8 @@
     @*<%--Meta tag to avoid auto zoom in and out on gaining and loosing focus on textbox on phones.--%>*@
     @RenderSection("metatags", required: false)
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css' />
-    <link href='http://www.berriart.com/sidr/javascripts/sidr/stylesheets/jquery.sidr.light.css'
-          rel='stylesheet' type='text/css' />
+    @*<link href='http://www.berriart.com/sidr/javascripts/sidr/stylesheets/jquery.sidr.light.css'
+          rel='stylesheet' type='text/css' />*@
     <script type="text/javascript" src="../Scripts/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/google-code-prettify/prettify.js"></script>
