committing url changes

--- a/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/Home/FindDoctors.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MiraiConsultMVC.Models.FindDoctorModel
 
 @{
-    ViewBag.Title = "FindDoctors";
+    ViewBag.Title = "values";
     if (Session["UserId"] == null)
     {
         Layout = "~/Views/Shared/_AskmiraiMasterLayout.cshtml";
