--- a/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AskmiraiMasterLayout.cshtml
@@ -43,7 +43,7 @@
         </asp:ContentPlaceHolder>*@
 </head>
 <body>
-    @RenderSection("featured", required: false)
+    @RenderSection("metatags", required: false)
     <div id="wrap">
         <div class="navbar custom-navbar">
             <div class="custom-navbar-links">
@@ -170,14 +170,14 @@
                                                  @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                                 {
                                                 <li><a href="@Url.Action("DoctorProfile","Doctors")"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/Questions/DoctorQuestionList"><i class="icon-list-alt"></i>My Account</a></li>
-                                                <li><a href="/User/ChangePassword"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="/Questions"><i class="icon-list-alt"></i>My Account</a></li>
+                                                <li><a href="/Changepassword"><i class="icon-key"></i>Change Password</a></li>
                                                 }
                                                 else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                                 {
-                                                <li><a href="@Url.Action("PatientProfile","Patients")"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/feed/feed"><i class="icon-list-alt"></i>My Account</a></li>
-                                                <li><a href="/User/ChangePassword"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="@Url.Action("PatientProfile")"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href="/Answers"><i class="icon-list-alt"></i>My Account</a></li>
+                                                <li><a href="/Changepassword"><i class="icon-key"></i>Change Password</a></li>
                                                 }
                                                 else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
                                                 {
