--- a/MiraiConsultMVC/Views/Shared/_AutoCompleteSearch.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_AutoCompleteSearch.cshtml
@@ -13,7 +13,7 @@
                             temp.innerHTML = item.questiontext;
                             return {
                                 label: temp.firstChild.nodeValue,
-                                value: '../Patients/PatientQuestionDetails/' + item.questionid
+                                value: '../Answers/' + item.questionid
                             }
                         }));
                     },
