--- a/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
+++ b/MiraiConsultMVC/Views/Shared/_PatientMasterLayout.cshtml
@@ -17,8 +17,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     @RenderSection("metatags", required: false)
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css' />
-    <link href='http://www.berriart.com/sidr/javascripts/sidr/stylesheets/jquery.sidr.light.css'
-          rel='stylesheet' type='text/css' />
+    @*<link href='http://www.berriart.com/sidr/javascripts/sidr/stylesheets/jquery.sidr.light.css'
+          rel='stylesheet' type='text/css' />*@
     <script type="text/javascript" src="../Scripts/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/google-code-prettify/prettify.js"></script>
@@ -58,13 +58,13 @@
                                         <ul class="dropdown-menu pull-right">
                                             @if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Patient))
                                             {
-                                                <li><a href ="@Url.Action("PatientProfile", "Patients")"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/User/ChangePassword"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href ="../PatientProfile"><i class="icon-user"></i>My Profile</a></li>
+                                                <li><a href="/Changepassword"><i class="icon-key"></i>Change Password</a></li>
                                             }
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
                                                 <li><a href="@Url.Action("DoctorProfile","Doctors")"><i class="icon-user"></i>My Profile</a></li>
-                                                <li><a href="/User/Changepassword"><i class="icon-key"></i>Change Password</a></li>
+                                                <li><a href="/Changepassword"><i class="icon-key"></i>Change Password</a></li>
                                             }
                                             <li>
                                                 <a id="linkLogout" onclick="return confirm('Are you sure you want to logout?');" href="/User/Logout"><i class="icon-off"></i>Logout</a>
@@ -118,17 +118,17 @@
                                                     </a>
                                                 </li>
                                                 <li id="liMyActivity" class="my-activity">
-                                                    <a href="/Patients/Myactivity">
-                                                        <span class="Icon Icon--my-activity Icon--large" id="MyActivitySpan" style="margin-top: 11px;"></span><span class="text"><br />My Activity</span>
+                                                    <a href="/Myactivity">
+                                                        <span class="Icon Icon--my-activity Icon--large"></span><span class="text"><br />My Activity</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFeed" class="feed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large" id="PatAnswerSpan" style="margin-top: 11px;"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liFindDoc" class="find-doctors">
-                                                    <a href="@Url.Action("FindDoctors", "FindDoctor")">
+                                                    <a href="@Url.Action("Home","finddoctors")">
                                                         <span class="Icon Icon--find-doctor Icon--large"></span><span class="text"><br />Find a Doctor</span>
                                                     </a>
                                                 </li>
@@ -136,16 +136,16 @@
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.Doctor))
                                             {
                                                 <li id="liDocFeed">
-                                                    <a href="/Feed/doctorfeed">
-                                                        <span class="Icon Icon--answers Icon--large" id="answerSpan"></span><span class="text"><br />Answers</span>
+                                                    <a href="/Doctor-Answers">
+                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liDocQuestions">
-                                                    <a href="/Questions/DoctorQuestionList">
-                                                        <span class="Icon Icon--questions Icon--large" id="questionSpan"></span>
-                                                        @if (Convert.ToInt32(@Session["UnQuestionCount"])!= 0)
-                                                        { 
-                                                         <span id="unansweredQuestionCount" title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
+                                                    <a href="/Questions">
+                                                        <span class="Icon Icon--questions Icon--large"></span>
+                                                        @if (Convert.ToInt32(@Session["UnQuestionCount"]) != 0)
+                                                        {
+                                                            <span id="unansweredQuestionCount" title="" class="unansweredQuestionCount">@Session["UnQuestionCount"]</span>
                                                         }
                                                         <span class="rightpaddingdiv text"><br />Questions</span>
                                                     </a>
@@ -154,27 +154,27 @@
                                             else if (Convert.ToInt32(Session["UserType"]) == Convert.ToInt32(UserType.SuperAdmin))
                                             {
                                                 <li id="liAdminQuestions">
-                                                    <a href="/admin/QuestionList">
-                                                        <span class="Icon Icon--questions Icon--large" id="adminQuestion" style="margin-top: 11px;"></span><span class="text"><br />Questions</span>
+                                                    <a href="/admin">
+                                                        <span class="Icon Icon--questions Icon--large"></span><span class="text"><br />Questions</span>
                                                     </a>
                                                 </li>
                                                 <li id="liAdminFeed">
                                                     <a href="@Url.Action("Feed", "Feed")">
-                                                        <span class="Icon Icon--answers Icon--large" id="adminAnswer" style="margin-top: 11px;"></span><span class="text"><br />Answers</span>
+                                                        <span class="Icon Icon--answers Icon--large"></span><span class="text"><br />Answers</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageTags">
-                                                    <a href="/admin/managetag">
-                                                        <span class="Icon Icon--tags Icon--large" id="tags" style="margin-top: 11px;"></span><span class="text"><br />Tags</span>
+                                                    <a href="/Tags">
+                                                        <span class="Icon Icon--tags Icon--large"></span><span class="text"><br />Tags</span>
                                                     </a>
                                                 </li>
                                                 <li id="liReports">
-                                                    <a href="/Admin/Report">
-                                                        <span class="Icon Icon--reports Icon--large" id="reports" style="margin-top: 11px;"></span><span class="text"><br />Reports</span>
+                                                    <a href="/Report">
+                                                        <span class="Icon Icon--reports Icon--large"></span><span class="text"><br />Reports</span>
                                                     </a>
                                                 </li>
                                                 <li id="liManageDoctor">
-                                                    <a href="/User/ManageDoctors">
+                                                    <a href="/Doctors">
                                                         <span class="Icon Icon--signup-requests Icon--large"></span><span class="text"><br />Signup Requests</span>
                                                     </a>
                                                 </li>
@@ -198,7 +198,7 @@
                             {
                                 <ul class="nav pull-right reguser-menu-top-margin">
                                     <li class="ask-doctor">
-                                        <a href="/Patients/AskDoctor" class="menu-padding reg-menu-padding">
+                                        <a href="/AskDoctor" class="menu-padding reg-menu-padding">
                                             <span class="Icon Icon--ask-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top">Ask Doctors</span>
                                         </a>
                                     </li>
@@ -206,7 +206,7 @@
                                 <ul class="nav pull-right">
                                     <li class="my-activity">
 
-                                        <a href="/Patients/Myactivity" class="menu-padding  reg-menu-padding">
+                                        <a href="/Myactivity" class="menu-padding  reg-menu-padding">
 
                                             <span class="Icon Icon--my-activity Icon--large"></span> <span class="text font-bold menutext-margin-top">My Activity</span>
                                         </a>
@@ -221,7 +221,7 @@
                                 </ul>
                                 <ul class="nav pull-right">
                                     <li class="find-doctors">
-                                        <a href="/Home/finddoctors" class="menu-padding  reg-menu-padding">
+                                        <a href="/values" class="menu-padding  reg-menu-padding">
                                             <span class="Icon Icon--find-doctor Icon--large"></span> <span class="text font-bold menutext-margin-top"> Find a Doctor</span>
                                         </a>
                                     </li>
@@ -391,36 +391,6 @@
             }
             window.onorientationchange = reorient;
             window.setTimeout(reorient, 0);
-
-            navigator.sayswho = (function () {
-                var ua = navigator.userAgent, tem,
-                M = ua.match(/(opera|chrome|safari|firefox|msie|trident(?=\/))\/?\s*(\d+)/i) || [];
-                if (/trident/i.test(M[1])) {
-                    tem = /\brv[ :]+(\d+)/g.exec(ua) || [];
-                    return 'IE ' + (tem[1] || '');
-                }
-                if (M[1] === 'Chrome') {
-                    //$('#QuestionSpan').removeClass('menu_margin');
-                }
-                else if (M[1] === 'Firefox') {
-                    $('#reports').addClass('menu_margin');
-                    $('#tags').addClass('menu_margin');
-                    $('#adminAnswer').addClass('menu_margin');
-                    $('#adminQuestion').addClass('menu_margin');
-                    $('#MyActivitySpan').addClass('menu_margin');
-
-                    $('#PatAnswerSpan').addClass('menu_margin');
-                    $('#answerSpan').addClass('menu_margin');
-                    $('#questionSpan').addClass('menu_margin');
-
-                }
-                else if (M[1] === 'Trident') {
-                    alert('hello');
-                    $('#questionSpan').addClass('menu_margin');
-
-                }
-            })();
-
         });
         var tryNumber = 0;
         jQuery('input[type=submit]').click(function (event) {
