--- a/MiraiConsultMVC/Views/User/Login.cshtml
+++ b/MiraiConsultMVC/Views/User/Login.cshtml
@@ -72,7 +72,7 @@
                             <div class="span8 pull-right btn-padding-left controls-right-padding offset4">
                                 <input id="btnLogin" class="btn thanx gray-border" type="submit" value="Sign in" />
                                 <div class="pull-right">
-                                    <a href="/User/forgotpassword" type="checkbox" style="color:#a7af38;font-weight:600; padding-top:5px;">Forgot Password?</a>
+                                    <a href="/forgotpassword" type="checkbox" style="color:#a7af38;font-weight:600; padding-top:5px;">Forgot Password?</a>
                                 </div>
                             </div>
                         </div>
