--- a/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
+++ b/MiraiConsultMVC/Views/User/ManageDoctors.cshtml
@@ -198,7 +198,7 @@
         }
     }
     function showDoctorDetailById(DoctorID) {
-        window.location.href = "/Doctors/doctorprofile?UserId=" + DoctorID;
+        window.location.href = "/DoctorProfile/" + DoctorID;
     }
     function EndRequestHandler() {
         initDataTable();
