Firefox issue is resolved for Terms&Conditions, Privacy Policy & How we work pages

--- a/MiraiConsultMVC/Views/Home/HowWeWorks.cshtml
+++ b/MiraiConsultMVC/Views/Home/HowWeWorks.cshtml
@@ -4,10 +4,11 @@
 }
 
 <script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
-
 <div class="row-fluid">
-    <div class="span6 main-outter-padding toppaddingHome finddoc-title">
-        How we work
+    <div class="span12">
+        <div class=" main-outter-padding toppaddingHome finddoc-title">
+            How we work
+        </div>
     </div>
 </div>
 <div class="row-fluid">
