--- a/MiraiConsultMVC/Views/Home/PrivacyPolicy.cshtml
+++ b/MiraiConsultMVC/Views/Home/PrivacyPolicy.cshtml
@@ -4,8 +4,10 @@
 }
 <script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
 <div class="row-fluid">
-    <div class="span6 main-outter-padding toppaddingHome finddoc-title">
-        Privacy Policy
+    <div class="span12">
+        <div class=" main-outter-padding toppaddingHome finddoc-title">
+            Privacy Policy
+        </div>
     </div>
 </div>
 <div class="row-fluid">
