--- a/MiraiConsultMVC/Views/Home/TermsOfUse.cshtml
+++ b/MiraiConsultMVC/Views/Home/TermsOfUse.cshtml
@@ -5,8 +5,10 @@
 
 <script type="text/javascript" src="../Scripts/bootstrap-dropdown.js"></script>
 <div class="row-fluid">
-    <div class="span6 main-outter-padding toppaddingHome finddoc-title">
-        Terms & Conditions
+    <div class="span12">
+        <div class=" main-outter-padding toppaddingHome finddoc-title">
+            Terms & Conditions
+        </div>
     </div>
 </div>
 <div class="row-fluid">
