Images path corrected

--- a/MiraiConsultMVC/Views/FindDoctor/FindDoctors.cshtml
+++ b/MiraiConsultMVC/Views/FindDoctor/FindDoctors.cshtml
@@ -146,7 +146,7 @@
                             if (response[indexcnt].photopath)
                                 var img = (response[indexcnt].photopath) + escape(response[indexcnt].photourl);
                             else
-                                var img = "../Resources/image/img-na.png";
+                                var img = "../Content/image/img-na.png";
                             var loaction = '';
                             if (response[indexcnt].cities && response[indexcnt].locations) {
                                 loaction = response[indexcnt].cities + ',' + response[indexcnt].locations
