--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -90,7 +90,7 @@
         });
     });
     $("#btnNext").click(function () {
-        var questionText = document.getElementById('txtAreaQuestion').value;
+        var questionText = document.getElementById('txtAreaQuestion').value.trim();
         if (questionText.trim() == null || questionText.trim() == "") {
             document.getElementById('lblValidation').style.display = 'block';
             document.getElementById('lblValidation').innerHTML = "Please Enter Question";
@@ -136,7 +136,7 @@
     });
 
     $("#btnAskMirai").click(function () {
-        var questionText = document.getElementById('txtAreaQuestion').value;
+        var questionText = document.getElementById('txtAreaQuestion').value.trim();
         if (questionText == null || questionText == '') {
             document.getElementById('lblValidation').style.display = 'block';
             document.getElementById('lblValidation').innerHTML = "Please Enter Question";
