Fixed whitespace related issue on askDoctor

--- a/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
+++ b/MiraiConsultMVC/Views/Patients/AskDoctor.cshtml
@@ -137,7 +137,7 @@
 
     $("#btnAskMirai").click(function () {
         var questionText = document.getElementById('txtAreaQuestion').value;
-        if (questionText == null || questionText == '') {
+        if (questionText == null || questionText.trim() == "") {
             document.getElementById('lblValidation').style.display = 'block';
             document.getElementById('lblValidation').innerHTML = "Please Enter Question";
             return true;
