--- a/MiraiConsultMVC/Views/User/Changepassword.cshtml
+++ b/MiraiConsultMVC/Views/User/Changepassword.cshtml
@@ -38,10 +38,11 @@
                 </div>
             </div>
             <br />
-            @using  (Html.BeginForm())
-                    {
+            @using (Html.BeginForm())
+            {
                          @Html.AntiForgeryToken()
                          @Html.ValidationSummary(true)
+                { 
             <div class="row-fluid">
                 <div class="span12">
                     <div class="span4 pull-left btn-padding-left">
@@ -88,13 +89,17 @@
                     </div>
                 </div>
             </div>
-}
+                }
+            }
             <br />
         </div>
     </div>
 </div>
 <!-- JavaScript -->
 <script type="text/javascript">
+    $(".input-block-level").keyup(function () {
+        $("form").valid();
+    });
     function MinLength(sender, args) {
         args.IsValid = (args.Value.length >= 6);
     }
